test/compilable/test71.d
// EXTRA_SOURCES: imports/test71.d
import imports_test71;

void bar()
{
    imports_test71.foo();
}
