test/fail_compilation/fail96.d
// 153

template bar(T) {
    void foo() {}
}

alias bar!(long).foo foo;
alias bar!(char).foo foo;


void main() {
    foo!(long);
}

